# Constellation_Chart

./: .gitignore  BTCUSDT_1m_100.csv  CRVUSDT_6h.csv  Cargo.toml  ETHUSDT_1m_500.csv  PRD.md  README.md
.github/workflows/: ci.yml
crates/chart-core/: Cargo.toml  build.rs
crates/chart-core/benches/: lttb_bench.rs  ohlc_bench.rs  render_bench.rs
crates/chart-core/src/: axis.rs  chart.rs  downsample.rs  geometry.rs  grid.rs  lib.rs  plugin.rs  rendering.rs  scale.rs  series.rs  text.rs  theme.rs  types.rs  view.rs
crates/chart-core/tests/: autoscale.rs  rgba.rs  smoke.rs  snapshot.rs  snapshot_series.rs
crates/chart-dioxus/: Cargo.toml
crates/chart-dioxus/src/: lib.rs
crates/chart-examples/: Cargo.toml
crates/chart-plugins-example/: Cargo.toml
crates/chart-plugins-example/src/: lib.rs
crates/chart-python/: Cargo.toml
crates/chart-python/src/: lib.rs
crates/chart-render-skia/: Cargo.toml
crates/chart-render-skia/src/: lib.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/window-demo/: Cargo.toml
crates/window-demo/src/: gpu_gl_demo.rs  main.rs
docs/: CONSULTANT_ADDENDUM.md
tests/: rendering.rs
